Added Current Status

--- a/fall_progress_report.tex
+++ b/fall_progress_report.tex
@@ -96,5 +96,9 @@ This week was spent finalizing the Design Document. A particular issue we had wi
 Over the weekend we will work together on the progress report. I will be working on the pieces of it related to what I have worked on during the term as well as the pieces that were group efforts.
 \section{Retrospective}
 \section{Current Status}
+For the project, we have currently designed out the full project and how we are going to accomplish the requirements we set out to do.
+We have not yet, however, started implementing the project or creating and storing the database.
+Until we know what services STEM Academy has access to, the database will not be able to get created fully, though we can create a prototype on our own web servers provided by Oregon State University.
+Although we have not started implementation yet, we will very soon.
 
 \end{document}
