minor edits and trying to work on table

--- a/fall_progress_reportV2.tex
+++ b/fall_progress_reportV2.tex
@@ -31,7 +31,7 @@ A website which will allow the STEM Academy to create and distribute surveys as 
 
 \section{Weekly Summary}
 \subsection{Week 3}
-\subsubsection{Shannon}
+
 For this week Shannon wrote the problem statement for our client. In addition, the problem statement outlined the markers of success. Our group edited the document three times before the client signed the problem statement and it was submitted to our class instructors. The primary issues with the problem statement were: the language around funding was not accurately reflecting the nature of funding for the client, the word choice was too technical or ambiguous for our client, and some markers of success were not included on the first draft. All of these issues were resolved with haste. The next step that our group will be taking will be sitting down with the client to come up with a more complete solution. The client requested to model our project based on Qualtrics and we will be examining Qualtrics this week to determine the benefits and short falls that it has, so that we can improve the implementation for our project. 
 
 \subsection{Week 4}
@@ -47,8 +47,8 @@ This week our group updated the requirements document primarily formatting. Each
 This week our group did not really do anything. Each person in our group was assigned 3 pieces that they will be responsible for the project. Our groups plan was to write the tech review over the weekend. Shannon pointed out that we still need to contact the OSU Help Desk to see what resources are available. 
 
 \subsection{Week 8} 
-\subsubsection{Shannon}
-This week our group finished our technical review document and each person was assigned one of three basic areas that they would be responsible for in the design document which include database management, report generation, and survey generation. Kyle wrote the abstract for the combined version of everyone's work for the technical review. The difficulty that each group member had with their part for the technical review varied. Shannon knew many great tehnologies that would make our work obsolete, but due to cost and of control of data we cannot use them which made it hard for her to find technologies to use in our project. Javier had a difficult time finding technologies for saving and generating reports. For saving reports he kept finding technologies that saved reports, but also generated reports. For generating a report he found some useful tools, but they had a monthly payment plan and another issue was whether or not we could modify the source code to incorporate the technology in our project. Our group noticed that we our going to have to implement the majority of our project from scratch and using the technologies that we find as reference for our design. Shannon contacted the OSU Help Desk and Central Services to get information on the infrastructure. She is till waiting on a response from them. Once we get the services that are provided to STEM Academy Kyle will be able to properly design a database based on those services. Shannon also ran into our client in the grocery store and was able to discuss with them future deadlines for the design document.  The next step that our group will be taking is getting a design document draft to our client by the end of Thanksgiving, so that they have time to review and provide edits. 
+
+This week our group finished our technical review document and each person was assigned one of three basic areas that they would be responsible for in the design document which include database management, report generation, and survey generation. Kyle wrote the abstract for the combined version of everyone's work for the technical review. The difficulty that each group member had with their part for the technical review varied. Shannon knew many great tehnologies that would make our work obsolete, but due to cost and of control of data we cannot use them which made it hard for her to find technologies to use in our project. Javier had a difficult time finding technologies for saving and generating reports. For saving reports he kept finding technologies that saved reports, but also generated reports. For generating a report he found some useful tools, but they had a monthly payment plan and another issue was whether or not we could modify the source code to incorporate the technology in our project. Our group noticed that we our going to have to implement the majority of our project from scratch and using the technologies that we find as reference for our design. Shannon contacted the OSU Help Desk and Central Services to get information on the infrastructure. She is still waiting on a response from them. Once we get the services that are provided to STEM Academy Kyle will be able to properly design a database based on those services. Shannon also ran into our client in the grocery store and was able to discuss with them future deadlines for the design document.  The next step that our group will be taking is getting a design document draft to our client by the end of Thanksgiving, so that they have time to review and provide edits. 
 
 \subsection{Week 9}
 For this week each person worked on their part for the design document. Shannon worked on designing the survey and question generation, Kyle worked on designing on how the database will be managed and interacted with it, and Javier worked on designing the report generation. While working on the design document our group had trouble understanding how to apply a viewpoint and view in the design document. The goal for our group is to complete a draft of the design document by Sunday, so that our client can view it on Monday and sign the document on Wednesday. 
@@ -61,7 +61,10 @@ This week our group was able to finish our design document. Shannon was able to 
     \begin{tabular}{ | l | l | l | p{0.3\linewidth} |}
     \hline
      Positive & Delta & Action \\ \hline
-  	This is the good section & This is the section for encountered issues & this is the section for solving issues \\ \hline
+  	Every assignment was completed & Our writing is not always concise and does not& always accurately convey our ideas & To solve the writing issue we will consult more with the instructors and TAs as well as go to the writing lab \\\hline
+	
+	We have solid understanding of our project & We had a really tough time with the IEEE formats & To solve the IEEE formatting issue, we will ask more questions in the future and take notes on the answer \\ \hline
+	We have a good relationship with our client & This is the section for encountered issues & this is the section for solving issues \\ \hline
     \end{tabular}
 \end{center}
 
