Fixed table and filled out client entry

--- a/fall_progress_reportV2.tex
+++ b/fall_progress_reportV2.tex
@@ -58,13 +58,12 @@ This week our group was able to finish our design document. Shannon was able to 
 
 \section{Retrospective}
 \begin{center}
-    \begin{tabular}{ | l | l | l | p{0.3\linewidth} |}
+    \begin{tabular}{ | p{5cm} | p{5cm} | p{5cm} |}
     \hline
      Positive & Delta & Action \\ \hline
-  	Every assignment was completed & Our writing is not always concise and does not& always accurately convey our ideas & To solve the writing issue we will consult more with the instructors and TAs as well as go to the writing lab \\\hline
-	
+  	Every assignment was completed & Our writing is not always concise and does not always accurately convey our ideas & To solve the writing issue we will consult more with the instructors and TAs as well as go to the writing lab \\\hline
 	We have solid understanding of our project & We had a really tough time with the IEEE formats & To solve the IEEE formatting issue, we will ask more questions in the future and take notes on the answer \\ \hline
-	We have a good relationship with our client & This is the section for encountered issues & this is the section for solving issues \\ \hline
+	We have a good relationship with our client & We could still make sure to more frequently update our clients on our progress & We will make sure to have email or in-person communication once a week \\ \hline
     \end{tabular}
 \end{center}
 
