--- a/fall_progress_reportV2.tex
+++ b/fall_progress_reportV2.tex
@@ -24,6 +24,9 @@
 
 \begin{document}
 \maketitle
+\begin{abstract}
+It has been a term of foundation building for the STEM Academy Data Solution. The project was assigned, requirements were outlines and a design has been produced. Though much work is left to do, this document outlines the current progress.
+\end{abstract}
 \newpage
 \section{Purpose and Goals}
 The STEM Academy in Corvallis, Oregon seeks to provide education in science, technology, engineering and math to the K-12 community through various programs and camps/clubs. It is self funded, relying on grants, donations and other sources, many of which require results based data on the STEM Academy. This data is collected from surveys that participants take while they are taking part in the program. Currently, these surveys are administered on paper and the responses are tabulated by hand by volunteers. This has not been an effective way of collecting current data to help secure funding and many of the surveys go untabulated. The STEM Academy has the ability to register participants online through Ideal Logic but this is the only digital component they have for collecting data. They need a system which will allow them to electronically distribute and print surveys, a database to house all of the data from those surveys, and a report generation system so they can view the most current data in a timely and meaningful way.\\
@@ -64,6 +67,7 @@ This week our group was able to finish our design document. Shannon was able to 
   	Every assignment was completed & Our writing is not always concise and does not always accurately convey our ideas & To solve the writing issue we will consult more with the instructors and TAs as well as go to the writing lab \\\hline
 	We have solid understanding of our project & We had a really tough time with the IEEE formats & To solve the IEEE formatting issue, we will ask more questions in the future and take notes on the answer \\ \hline
 	We have a good relationship with our client & We could still make sure to more frequently update our clients on our progress & We will make sure to have email or in-person communication once a week \\ \hline
+	&We need to do a better job of scheduling and keeping to the schedule& To fix the scheduling we will start having a calendar on github which we can all monitor and stick to \\ \hline
     \end{tabular}
 \end{center}
 
@@ -71,6 +75,6 @@ This week our group was able to finish our design document. Shannon was able to 
 For the project, we have currently designed out the full project and how we are going to accomplish the requirements we set out to do.
 We have not yet, however, started implementing the project or creating and storing the database.
 Until we know what services STEM Academy has access to, the database will not be able to get created fully, though we can create a prototype on our own web servers provided by Oregon State University.
-Although we have not started implementation yet, we will very soon.
+Although we have not started implementation yet, we will very soon. The main goal over winter break is to establish some coding prototypes so we can hit the ground running in January. 
 
 \end{document}
