--- a/CS461_fall__assignments/fall_progress_reportV2.tex
+++ b/CS461_fall__assignments/fall_progress_reportV2.tex
@@ -51,13 +51,13 @@ This week our group did not really do anything. Each person in our group was ass
 
 \subsection{Week 8} 
 
-This week our group finished our technical review document and each person was assigned one of three basic areas that they would be responsible for in the design document which include database management, report generation, and survey generation. Kyle wrote the abstract for the combined version of everyone's work for the technical review. The difficulty that each group member had with their part for the technical review varied. Shannon knew many great tehnologies that would make our work obsolete, but due to cost and of control of data we cannot use them which made it hard for her to find technologies to use in our project. Javier had a difficult time finding technologies for saving and generating reports. For saving reports he kept finding technologies that saved reports, but also generated reports. For generating a report he found some useful tools, but they had a monthly payment plan and another issue was whether or not we could modify the source code to incorporate the technology in our project. Our group noticed that we our going to have to implement the majority of our project from scratch and using the technologies that we find as reference for our design. Shannon contacted the OSU Help Desk and Central Services to get information on the infrastructure. She is still waiting on a response from them. Once we get the services that are provided to STEM Academy Kyle will be able to properly design a database based on those services. Shannon also ran into our client in the grocery store and was able to discuss with them future deadlines for the design document.  The next step that our group will be taking is getting a design document draft to our client by the end of Thanksgiving, so that they have time to review and provide edits. 
+This week our group finished our technical review document and each person was assigned one of three basic areas that they would be responsible for in the design document which include database management, report generation, and survey generation. Kyle wrote the abstract for the combined version of everyone's work for the technical review. The difficulty that each group member had with their part for the technical review varied. Shannon knew many great technologies that would make our work obsolete, but due to cost and of control of data we cannot use them which made it hard for her to find technologies to use in our project. Javier had a difficult time finding technologies for saving and generating reports. For saving reports he kept finding technologies that saved reports, but also generated reports. For generating a report he found some useful tools, but they had a monthly payment plan and another issue was whether or not we could modify the source code to incorporate the technology in our project. Our group noticed that we our going to have to implement the majority of our project from scratch and using the technologies that we find as reference for our design. Shannon contacted the OSU Help Desk and Central Services to get information on the infrastructure. She is still waiting on a response from them. Once we get the services that are provided to STEM Academy Kyle will be able to properly design a database based on those services. Shannon also ran into our client in the grocery store and was able to discuss with them future deadlines for the design document.  The next step that our group will be taking is getting a design document draft to our client by the end of Thanksgiving, so that they have time to review and provide edits. 
 
 \subsection{Week 9}
 For this week each person worked on their part for the design document. Shannon worked on designing the survey and question generation, Kyle worked on designing on how the database will be managed and interacted with it, and Javier worked on designing the report generation. While working on the design document our group had trouble understanding how to apply a viewpoint and view in the design document. The goal for our group is to complete a draft of the design document by Sunday, so that our client can view it on Monday and sign the document on Wednesday. 
 
 \subsection{Week 10}
-This week our group was able to finish our design document. Shannon was able to meet up with the client to get their signature and discovered that they may be going with Qualtrics which would render our project void. After she talked with McGrath we now know our options in the event that this happens. One new idea would be a paper scanning system for the surveys, so that they can process paper surveys faster. The plan for the entire group this weekend is to work on the progress report document and also on the PowerPoint presentation. Each person in our group will create slides for the part that they are responsible for in the design document and the other parts will be completed as a group. The goal for Saturday is to have the PowerPoint finished and to have each members recording finished on Sunday. Monday we will combine everything to finish the assignment. 
+This week our group was able to finish our design document. Shannon was able to meet up with the client to get their signature and discovered that they may be going with Qualtrics which would render our project void. After she talked with McGrath we now know our options in the event that this happens. One new idea would be a paper scanning system for the surveys, so that they can process paper surveys faster. The plan for the entire group this weekend is to work on the progress report document and also on the PowerPoint presentation. Each person in our group will create slides for the part that they are responsible for in the design document and the other parts will be completed as a group. The goal for Saturday is to have the PowerPoint finished and to have each member's recording finished on Sunday. Monday we will combine everything to finish the assignment. 
 
 \section{Retrospective}
 \begin{center}
@@ -65,7 +65,7 @@ This week our group was able to finish our design document. Shannon was able to 
     \hline
      Positive & Delta & Action \\ \hline
   	Every assignment was completed & Our writing is not always concise and does not always accurately convey our ideas & To solve the writing issue we will consult more with the instructors and TAs as well as go to the writing lab \\\hline
-	We have solid understanding of our project & We had a really tough time with the IEEE formats & To solve the IEEE formatting issue, we will ask more questions in the future and take notes on the answer \\ \hline
+	We have a solid understanding of our project & We had a really tough time with the IEEE formats & To solve the IEEE formatting issue, we will ask more questions in the future and take notes on the answer \\ \hline
 	We have a good relationship with our client & We could still make sure to more frequently update our clients on our progress & We will make sure to have email or in-person communication once a week \\ \hline
 	&We need to do a better job of scheduling and keeping to the schedule& To fix the scheduling we will start having a calendar on github which we can all monitor and stick to \\ \hline
     \end{tabular}
@@ -75,6 +75,6 @@ This week our group was able to finish our design document. Shannon was able to 
 For the project, we have currently designed out the full project and how we are going to accomplish the requirements we set out to do.
 We have not yet, however, started implementing the project or creating and storing the database.
 Until we know what services STEM Academy has access to, the database will not be able to get created fully, though we can create a prototype on our own web servers provided by Oregon State University.
-Although we have not started implementation yet, we will very soon. The main goal over winter break is to establish some coding prototypes so we can hit the ground running in January. 
+Although we have not started implementation yet, we will very soon. The main goal over winter break is to establish some coding prototypes, so we can hit the ground running in January. 
 
 \end{document}
