Added, but not fully, documentation on new tables

--- a/design_doc.tex
+++ b/design_doc.tex
@@ -366,7 +366,7 @@ CREATE TABLE Text
 
 CREATE TABLE Camp
 (
- camp_id int NOT NULL
+ camp_id int NOT NULL AUTO_INCREMENT
  title varchar(255)
  start_date date NOT NULL
  end_date date NOT NULL
