Added, but not fully, documentation on new tables

--- a/design_doc.tex
+++ b/design_doc.tex
@@ -373,7 +373,7 @@ CREATE TABLE Camp
  PRIMARY KEY (camp_id)
 )
 
-CREATE TABLE Use
+CREATE TABLE Usage
 (
  camp_id int NOT NULL
  survey_id int NOT NULL
